# MLOps-name-prediction

./: Dockerfile  README.md  app.py  code_terraform.txt  main.py  pyproject.toml
.github/workflows/: deploy_prenoms.yml
