[tool.poetry]
name = "projet-ml-ops"
version = "0.1.0"
description = "Projet MLOps de prediction de sexe à partir de prénoms"
authors = ["tomagon <agonnoudetom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.3.2"
pandas = "2.0.3"
joblib = "^1.3.2"
unicorn = "^2.0.1.post1"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
